Bug 153451 - Kickoff favourites do not show up in another instance of Kickoff
Summary: Kickoff favourites do not show up in another instance of Kickoff
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-kickoff (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-12-04 22:16 UTC by Grósz Dániel
Modified: 2007-12-16 09:33 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Grósz Dániel 2007-12-04 22:16:45 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources
OS:                Linux

If I already have an Application Launcher (Kickoff) plasmoid and create a new instance of it, the new one has empty Favourites list. However, if I add a new favoutite to one of the instances, it shows up in both instances.
Comment 1 Pino Toscano 2007-12-05 11:11:47 UTC
Re-unconfirm (owner changing confirmed the bug).
Comment 2 Jason Stubbs 2007-12-16 09:33:02 UTC
SVN commit 749009 by jstubbs:

Add the global favourites into the local model when creating a second
(or third..) instance.

BUG: 153451


 M  +4 -0      favoritesmodel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=749009