Add the global favourites into the local model when creating a second (or third..) instance.

BUG: 153451

svn path=/trunk/KDE/kdebase/workspace/; revision=749009